--- a/next/package.json
+++ b/next/package.json
@@ -66,6 +66,7 @@
     "react-beforeunload": "^2.6.0",
     "react-cookie-consent": "7.5.0",
     "react-dom": "18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.42.1",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "8.0.3",
