--- a/next/package.json
+++ b/next/package.json
@@ -68,6 +68,7 @@
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.42.1",
+    "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "8.0.3",
     "react-remove-scroll": "^2.5.5",
